2022-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/download.rst: Document how to retrieve the PGP signing key
        from a key server.

2022-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (ReadJP2Image): Always use
        ThrowJP2ReaderException().  Should address oss-fuzz Issue 43979:
        "graphicsmagick:enhance_fuzzer: ASSERT: jas_get_ctx() ==
        jas_global.ctx".

2022-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * utilities/tests: Write compressed MIFF files to reduce disk
        space usage.

        * magick/command.c (CompareImageCommand): Support '-compress'
        option.

        * coders/mpc.c: Fix warnings from GCC 11.

        * coders/miff.c: Fix warnings from GCC 11.

2022-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c: Adaptations to work with Jasper 3.0.0's
        jas_init_library() and other related functions.  Add missing
        jas_cleanup_thread().  Do not request a higher memory limit than
        JasPer's own limit in order to avoid a warning.

2022-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/miff.c (ReadMIFFImage): Do not proceed to next image in
        sequence unless the character read is the expected 'i' character.
        Inspired by GraphicsMagick bug #659 "Can not escape $0 in a batch
        command".

        * coders/heif.c (ReadHEIFImage): Take row stride into account when
        reading pixel rows. Add support for 'ping' mode.  Add header magic
        detection.  Add module aliases.  Add useful traces.

2022-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jxl.c: Added preliminary JPEG XL support written by
        Tobias Mark.  From Code Merge Request #14: "Added (basic) jpeg-xl
        support".  The writer is not working properly at this time.

        * www/formats.rst: Add HEIF to the list of supported formats.
