@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220128"
-#define public MagickPackageReleaseDate "snapshot-20220128"
+#define public MagickPackageVersionAddendum ".020220130"
+#define public MagickPackageReleaseDate "snapshot-20220130"
