@@ -1,3 +1,9 @@
+2022-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/jp2.c (ReadJP2Image): Jasper 3.0.0 hid the functions we
+        were using so switch back to using jas_image_decode(), but in a
+        more secure way than before.
+
 2022-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * www/download.rst: Document how to retrieve the PGP signing key
